third_party/rust/pin-project/tests/ui/pinned_drop/forget-pinned-drop-impl.stderr
error[E0277]: the trait bound `Struct: PinnedDrop` is not satisfied
 --> tests/ui/pinned_drop/forget-pinned-drop-impl.rs:3:15
  |
3 | #[pin_project(PinnedDrop)] //~ ERROR E0277
  |               ^^^^^^^^^^ the trait `PinnedDrop` is not implemented for `Struct`
