third_party/rust/pin-project/tests/ui/pinned_drop/forget-pinned-drop-impl.rs
use pin_project::pin_project;

#[pin_project(PinnedDrop)] //~ ERROR E0277
pub struct Struct {
    #[pin]
    field: u8,
}

fn main() {}
